--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -7,7 +7,8 @@ on:
 env:
     REGISTRY: ghcr.io
     IMAGE_NAME: ${{ github.repository }}
-    MAYHEMFILE: Mayhemfile
+    HASH: hash.mayhemfile
+    VERIFY: verify.mayhemfile
 
 jobs:
     build:
@@ -46,11 +47,18 @@ jobs:
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
 
-            - name: Start analysis
+            - name: Start hash analysis
               uses: ForAllSecure/mcode-action@v1
               with:
                   mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
-                  args: --image ${{ steps.meta.outputs.tags }} --file ${{ env.MAYHEMFILE }}
+                  args: --image ${{ steps.meta.outputs.tags }} --file ${{ env.HASH }}
+                  sarif-output: sarif
+
+            - name: Start verify analysis
+              uses: ForAllSecure/mcode-action@v1
+              with:
+                  mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
+                  args: --image ${{ steps.meta.outputs.tags }} --file ${{ env.VERIFY }}
                   sarif-output: sarif
 
             - name: Upload SARIF file(s)
